--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ main {
 
 .main-hero {
     min-height: 40vh;
-    padding-top: 3em;
+    padding-top: 4em;
 }
 
 section {
@@ -87,6 +87,10 @@ section {
     background: #333;
     color: #fff;
     transition: ease 0.3s all;
+}
+
+nav.menu__disappear{
+	display:none;
 }
 
 /* Header Styles */
@@ -221,4 +225,24 @@ section.your-active-class .landing__container::after {
 		           translate(-1em) 
 		           rotate(-360deg);
 	}
+}
+
+/* Button Style */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 50%;
+}
+#myBtn:hover {
+  background-color: #555;
 }
